Add LibraryModulesSchemasFactory
The EffectiveModelContext depends on the parser, make sure we propagate
it accordingly. This allows LibraryModulesSchemas to be used in OSGi
again.

Change-Id: I014d799270a46f9df5ce0e6fc620824d11ef2cb1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
Signed-off-by: Peter Suna <peter.suna@pantheon.tech>